# task_manager

./: .env-example  .gitignore  Dockerfile  README.md  docker-compose.yml  init.sh  pyproject.toml
src/task_manager/: __main__.py  alembic.ini  app.py  create_db.py  settings.py
src/task_manager/alembic/: env.py
src/task_manager/alembic/versions/: 2c55cddd7544_create_tables.py  e677dfd06b5c_initial.py
src/task_manager/api/: __init__.py  auth.py  tasks.py
src/task_manager/models/: auth.py  tasks.py
src/task_manager/services/: auth.py  tasks.py
src/task_manager/sql_app/: create_db.py  database.py  enums.py  tables.py
