[tool.poetry]
name = "task_manager"
version = "0.1.0"
description = ""
authors = ["nuri <nurhotun95@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
uvicorn = "^0.17.6"
SQLAlchemy = "^1.4.32"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.5"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
